--- a/views/create.ejs
+++ b/views/create.ejs
@@ -34,7 +34,7 @@
 								<input type="text" name="options" placeholder="option 3" class="form-control">
 							</div>
 							<div class="my-2">
-								<input type="submit" name="submit" class="btn btn-primary">
+								<input type="submit" class="btn btn-primary" value="Create Poll">
 								<button id='addBtn' class="btn btn-success">Create option</button>
 							</div>
 						</form>
@@ -42,7 +42,6 @@
 				</div>
 			</div>
 		</div>
-	</form>	
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
