change controller file just forEach replace forloop

--- a/views/ViewPolls.ejs
+++ b/views/ViewPolls.ejs
@@ -18,6 +18,7 @@
                    <h4>Enter Your Opinion</h4>
                    <div>
                        <h4>Result:</h4>
+					   <h1>TotalVote : <strong class='text-success'><%=Polls.totalVote%></strong></h1>
                        <!--<p><%=Polls.totalVote%></p>-->
                         <ul class="list-group">
                             <%for(let r of result){%>
